# hidden_inverse_exp

./: .gitignore  README.md  alternating_cnot_decomposition.py  cnot_decompositions.py  demo_notebook.ipynb  hidden_inverse_pass.py  hseires_decompositions.py  hseries_decompositions.py  pauli_gadget_pass.py  phase_gadget_pass.py  pyproject.toml  requirements.txt  tests.py  validate_cx.ipynb  validation_pauli_gadget.ipynb
notebooks/: demo_notebook.ipynb  validate_pauli_gadget.ipynb
notebooks/working_notebooks/: demo_notebook.ipynb
qasm_circuits/: h4sq_pga.qasm  pauli_gadget_q2_d1.qasm  pauli_gadget_q2_d2.qasm  pauli_gadget_q3_d1.qasm
src/: gadget_pass.py  hseries.py
src/hidden_inverse/: __init__.py  gadget_pass.py  hseries.py
src/hidden_inverse/utils/: random.py
src/hidden_inverse_exp/: __init__.py  alternating_pass.py  hseries.py
src/hidden_inverse_exp/utils/: generate_pauli_gadgets.py  plotting.py  random.py
tests/: test_circuits.py
utils/: circuit_builders.py  generate_pauli_gadgets.py  plotting.py
