[project]
name = "hidden-inverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CalMacCQ", email = "93673602+CalMacCQ@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = ["pytket>=1.38.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.3.4",
]
